--- a/app/styles/mixins/_list-item.scss
+++ b/app/styles/mixins/_list-item.scss
@@ -21,6 +21,9 @@
   &:not(.not-selectable):hover {
     background: var(--list-item-hover-background-color);
     color: var(--list-item-hover-text-color);
-    border: var(--list-item-hover-border);
+    border-bottom: var(--list-item-hover-border-bottom);
+    border-top: var(--list-item-hover-border);
+    border-left: var(--list-item-hover-border);
+    border-right: var(--list-item-hover-border);
   }
 }
